# content-cue-agent

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: main.py
api/routes/: campaigns.py
backend/: .env.example  Dockerfile  Dockerfile.dev  railway.toml  requirements.txt
backend/src/: config.py  database.py  llm_router.py  main.py  state.py
backend/src/auth/: dependencies.py  router.py  schemas.py
backend/src/brands/: router.py  schemas.py  service.py
backend/src/campaigns/: router.py  schemas.py  service.py
backend/src/graph/: __init__.py  workflow.py
dashboard/: app.py
dashboard/pages/: 01_New_Campaign.py  02_Review.py  03_History.py
data/: brand_guidelines.md  products.json
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/layout/: Header.tsx  (+1 more)
scripts/: index_data.py  run_campaign.py  test_agents.py
src/: llm_router.py  state.py
src/agents/: adapter_agent.py  blog_agent.py  copy_agent.py  orchestrator.py  quality_agent.py  visual_agent.py
src/graph/: routing.py  workflow.py
src/rag/: indexer.py  retriever.py
src/tools/: brand_context.py  file_tools.py  ideogram_tool.py  image_resizer.py  product_catalog.py
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_auth_trigger.sql
tests/: test_copy_agent.py  test_graph.py  test_llm_router.py
(+11 files in other folders)
